<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/side_nav_bar"
    android:padding="10dp"
    tools:context=".VerificationCode">


    <TextView
        android:layout_width="250dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/verifiaction_code" />


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_iphone_black_24dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/code"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/terminer"
        />
</LinearLayout>