<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".SignWithPhone">



    <EditText
        android:id="@+id/phone_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_ro_de_t_l_phone"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/phone_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="Se Connecter"
        android:textAllCaps="false"
        android:elevation="100dp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:linksClickable="true"
            android:textColor="@color/white"
            android:layout_marginLeft="2dp"/>


    </LinearLayout>

</LinearLayout>