<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserRegistration"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


         <ImageView
             android:labelFor="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_person_outline_black_24dp"
             android:layout_marginTop="10dp"/>

        <EditText
            android:textColor="@color/white"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/nom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:labelFor="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_outline_black_24dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:textColor="@color/white"
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/pr_nom"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:labelFor="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_iphone_black_24dp"
            android:layout_marginTop="10dp"/>

        <EditText

            android:id="@+id/phone_number"
            android:textColor="@color/white"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/num_ro_de_t_l_phone"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:labelFor="@+id/userpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:textColor="@color/white"
            android:id="@+id/userpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/mots_de_passe"/>

    </LinearLayout>

    <Button
        android:id="@+id/new_account"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuer"
        android:textAllCaps="false"
        android:background="@color/white"
        android:gravity="center"/>


    <TextView
        android:layout_margin="10dp"
        android:gravity="center"
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:visibility="invisible"/>


</LinearLayout>